tools/tests/errors/surf_name_09.experr
name 'counter' is not defined
